# ros2-rt-hw-accel

./: .gitignore  README.md  Vagrantfile  kr260.repos
kr260/: README.md  krs.repos
kr260/demo/rt_hw_accel_demo/: CMakeLists.txt  package.xml
kr260/demo/rt_hw_accel_demo/cfg/: kr260_fpga_graph.cfg
kr260/demo/rt_hw_accel_demo/include/: cmd_line_sched.hpp  cpu_harris_node.hpp  fpga_harris_node.hpp  sched_utils.hpp
kr260/demo/rt_hw_accel_demo/launch/: trace_cpu_graph.launch.py  trace_fpga_graph.launch.py
kr260/demo/rt_hw_accel_demo/src/: cpu_graph.cpp  cpu_harris_node.cpp  fpga_graph.cpp  fpga_harris_node.cpp
kr260/demo/rt_hw_accel_demo/src/kernels/: xf_harris_accel.cpp
kr260/demo/rt_hw_accel_msgs/: CMakeLists.txt  package.xml
kr260/demo/rt_hw_accel_msgs/msg/: PointArray.msg
kr260/petalinux/: .gitignore
kr260/petalinux/.petalinux/: metadata
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/: README.hw  kr260_starter_kit.xpr  kr260_starter_kit.xsa
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.cache/wt/: synthesis.wdf
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.gen/sources_1/bd/kr260_starter_kit/: kr260_starter_kit.bxml
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  gen_run.xml  htr.txt  init_design.pb  kr260_starter_kit_wrapper.tcl  kr260_starter_kit_wrapper.vdi  kr260_starter_kit_wrapper_bus_skew_routed.rpt  kr260_starter_kit_wrapper_bus_skew_routed.rpx  kr260_starter_kit_wrapper_clock_utilization_routed.rpt  kr260_starter_kit_wrapper_control_sets_placed.rpt  kr260_starter_kit_wrapper_drc_opted.rpt  kr260_starter_kit_wrapper_drc_routed.rpt  kr260_starter_kit_wrapper_io_placed.rpt  kr260_starter_kit_wrapper_methodology_drc_routed.rpt  kr260_starter_kit_wrapper_opt.dcp  kr260_starter_kit_wrapper_physopt.dcp  kr260_starter_kit_wrapper_placed.dcp  kr260_starter_kit_wrapper_power_routed.rpt  kr260_starter_kit_wrapper_power_routed.rpx  kr260_starter_kit_wrapper_routed.dcp  kr260_starter_kit_wrapper_timing_summary_routed.rpt  kr260_starter_kit_wrapper_timing_summary_routed.rpx  kr260_starter_kit_wrapper_utilization_placed.rpt  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  vivado.pb  write_bitstream.pb
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.runs/kr260_starter_kit_zynq_ultra_ps_e_0_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  htr.txt  kr260_starter_kit_zynq_ultra_ps_e_0_0.tcl  kr260_starter_kit_zynq_ultra_ps_e_0_0.vds  kr260_starter_kit_zynq_ultra_ps_e_0_0_utilization_synth.rpt  rundef.js  runme.sh  vivado.pb
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  htr.txt  kr260_starter_kit_wrapper.dcp  kr260_starter_kit_wrapper.tcl  kr260_starter_kit_wrapper.vds  kr260_starter_kit_wrapper_utilization_synth.rpt  rundef.js  runme.sh  vivado.pb
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.srcs/sources_1/bd/kr260_starter_kit/: kr260_starter_kit.bd
kr260/petalinux/hardware/xilinx-kr260-starterkit-2023.1/kr260_starter_kit.srcs/sources_1/imports/hdl/: kr260_starter_kit_wrapper.v
kr260/petalinux/project-spec/configs/: .statistics  config  plnx_syshw_data  plnxtool.conf  rootfs_config  xilinx-k26-kr.conf
kr260/petalinux/project-spec/configs/.Xil/XSCT-13883-hammer/: kr260_starter_kit.bda
kr260/petalinux/project-spec/configs/init-ifupdown/: interfaces
kr260/petalinux/project-spec/configs/systemd-conf/: wired.network
kr260/petalinux/project-spec/hw-description/: kr260_hardware_platform.bit  psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h
kr260/petalinux/project-spec/image/: rootfs.wks
kr260/petalinux/project-spec/meta-user/conf/: petalinuxbsp.conf  user-rootfsconfig
kr260/petalinux/project-spec/meta-user/recipes-apps/packagegroups/: packagegroup-ros2-kria.bb
kr260/petalinux/project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend  linux-xlnx_2023.1.bbappend
kr260/petalinux/project-spec/meta-user/recipes-kernel/linux/linux-xlnx/: patch-6.1-rc7-rt5-xlnx.patch  user_2023-10-20-20-22-00.cfg  user_2023-11-03-19-03-00.cfg  user_2023-12-04-18-01-00.cfg  user_2023-12-05-14-31-00.cfg
kr260/petalinux/project-spec/meta-user/recipes-ros/image-pipeline/: depth-image-proc_%.bbappend  image-pipeline_%.bbappend
kr260/util/: kr260-laptop-net.sh
tools/docker/: Dockerfile  Makefile
tools/docker/files/: requirements.txt
tools/docker/files/motd/: static  version
tools/vagrant/: Vagrantfile
(+29 files in other folders)
